fix(waybar): inconsistent module spacing

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -59,26 +59,19 @@
 
 /* Each module */
 .modules-right .module {
-    padding-left: 8px;
-    padding-right: 8px;
+    padding-left: 6px;
+    padding-right: 6px;
     /* center vertically */
     padding-top: 1px;
 }
 
-#pulseaudio {
-    padding-left: 5px;
+#backlight {
+    padding-left: 4px;
+    padding-right: 2px;
 }
 
 #clock {
-    padding-left: 8px;
-    padding-right: 0px;
-}
-
-#battery {
-    padding-right: 6px;
-}
-#backlight {
-    padding-left: 4px;
+    padding-left: 6px;
     padding-right: 0px;
 }
 
